# clickup-rui

./: .gitignore  AGENTS.md  Cargo.toml  ISSUES.md  LOGGING_REVIEW.md  Makefile  PKG.md  README.md  RUST-PORT.md  backlog.md
refs/: RUST-PORT-ARCHIVE.md
reviews/: agy-11-june.md  code-review-11-june.md  project-review-2026-06-11.md
src/: app.rs  main.rs
src/ai/: mod.rs  summarizer.rs
src/cache/: client.rs  mod.rs  store.rs  ttl.rs
src/clickup/: api.rs  client.rs  models.rs
src/cmd/: activity.rs  browse.rs  cache_cmd.rs  clean.rs  config_cmd.rs  menu.rs  mod.rs  new_task.rs  setup.rs  show.rs  standup.rs  summarize.rs  tasks.rs  team_status.rs  track.rs  workload.rs
src/config/: mod.rs  paths.rs
src/ui/: mod.rs  spinner.rs  styles.rs  terminal.rs
src/util/: env.rs  errors.rs  filter.rs  format.rs  mod.rs  sort.rs
